--- a/index.html
+++ b/index.html
@@ -200,31 +200,24 @@
 				<div class="col-md-6">
 					<h2 class="mb-5">Education</h2>
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">New York University</span>
+						<span class="date"><span class="icon-calendar"></span> September 2019 - Present</span>
+						<h3>Artificial Intelligence Engineer Student</h3>
+						<p>Preparatory Classes + AI, Big Data, Machine Learning</p>
+						<span class="school">Euromed University of Fez</span>
 					</div>
 
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">New York University</span>
+						<span class="date"><span class="icon-calendar"></span> February 2020 - May 2020</span>
+						<h3>Web developement remote Student</h3>
+						<p>At CS50W : Web developement with Python and JavaScript</p>
+						<span class="school">Harvard University - CS50W</span>
 					</div>
 
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">New York University</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">New York University</span>
+						<span class="date"><span class="icon-calendar"></span> September 2018 - June 2019</span>
+						<h3>Baccaleureat year in Mathematical sciences-Option B</h3>
+						<p>Casablanca, Morocco</p>
+						<span class="school">Ibn Mandour High School</span>
 					</div>
 
 				</div>
@@ -234,32 +227,26 @@
 					<h2 class="mb-5">Experience</h2>
 
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">Github</span>
+						<span class="date"><span class="icon-calendar"></span> June 2020 - Present</span>
+						<h3>Print on demand freelancer</h3>
+						<p>Owning a clothing brand (Medmac's Designs) , and working for RedBubble & TeeSpring company.</p>
+						<span class="school">RedBubble</span>
+					</div>
+
+					<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> January 2021 - Present</span>
+						<h3>Team working in a project</h3>
+						<p>Me and 4 of my colleagues are currently working on a prototype of a smart (IoT) parking in coordination with SFinder.</p>
+						<span class="school">UEMF</span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">Facebook</span>
+						<h3>Web Designer</h3>
+						<p>Developed COVID-19 real-time stats app , using HTML/CSS/JS/Bootstrap</p>
+						<span class="school"></span>
 					</div>
 
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">Twitter</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">Shopify</span>
-					</div>
 
 
 				</div>
@@ -277,9 +264,8 @@
 					<div class="section-heading">
 						<h2>About <strong>Me</strong></h2>
 					</div>
-					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-
+					<p class="lead">19 years old Moroccan guy, born in Casablanca, Morocco. Muslim , and passionate of Neural Networks and Artificial Intelligence. Trying to adopt minimalism (still trying 😆).</p>
+					<p class="mb-5  ">#minimalist #coffeelover #AI #catlover #graphicdesigner #POD</p>
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
 						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
@@ -387,9 +373,9 @@
 						<span class="icon">
 							<span class="icon-presentation"></span>
 						</span>
-						<h3 class="mb-4">Search Engine Optimization</h3>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
+						<h3 class="mb-4">Part-time graphic Designer</h3>
+						<p>You can check my latest products on my <a href="medmac01.redbubble.com">shop</a> (and shop them if you want!)</p>
+						<p><a href="medmac01.redbubble.com" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
