Removed Featured Section.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Rezume Free Template by Colorlib</title>
+	<title>Mohammed Machrouh's Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/animate.css">
@@ -60,7 +60,7 @@
 
 
 
-	<section class="site-section" id="section-portfolio">
+	<!-- <section class="site-section" id="section-portfolio">
 		<div class="container">
 			<div class="row">
 				<div class="section-heading text-center col-md-12">
@@ -185,7 +185,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- .section -->
 
 	
