--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
 
-					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Mohammed Machrouh</strong></h1>
+					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Ayoub Hsaine</strong></h1>
 					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Resume</strong>
 
 				</div>
@@ -227,24 +227,49 @@
 					<h2 class="mb-5">Experience</h2>
 
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> June 2020 - Present</span>
-						<h3>Print on demand freelancer</h3>
-						<p>Owning a clothing brand (Medmac's Designs) , and working for RedBubble & TeeSpring company.</p>
-						<span class="school">RedBubble</span>
+						<span class="date"><span class="icon-calendar"></span>Aug 2022 </span>
+						<h3>Online Intership Application</h3>
+						<p>The purpuse of this intership is to develop an application mobile that solves the problem of prescriptions validation , the main problem is they are some drugs need a valiadtion by pharmacists before the nurses give it to patients and this problem is caused by large numbers of patients,
+							so we decide to find a solution by developping an application facilate the process.
+							In the end of this intership we are developping a prototype application then we are creating 
+							a functional database link between doctors,nurses and pharmacists using :
+							Wamp Server, Mysql, PHPMyAdmin, PHP and Postman and also based on diagrams.</p>
+						<span class="school">Centre Hospitalier Universitaire Hassan II </span>
 					</div>
 
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> January 2021 - Present</span>
-						<h3>Team working in a project</h3>
-						<p>Me and 4 of my colleagues are currently working on a prototype of a smart (IoT) parking in coordination with SFinder.</p>
-						<span class="school">UEMF</span>
+						<span class="date"><span class="icon-calendar"></span> Jul 2022</span>
+						<h3>Initiation Internship</h3>
+						<p>This internship was unique in terms of learning new skills.
+							This internship was an opportunity to confront the professional world, to how integrate well into a company’s team.
+							This internship was a rewarding professional experience, We were able to put into practice our knowledge and discover the world of the production line of machining discs in different operands. Discover the technologies used within the company. 
+							</p>
+						<span class="school">FLOQUET MONOPOLE</span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
 						<h3>Web Designer</h3>
-						<p>Developed COVID-19 real-time stats app , using HTML/CSS/JS/Bootstrap</p>
-						<span class="school"></span>
+						<p>This program was organized in two weeks, and it divides into two main sections:
+							1.Intelligent Transportation & Smart Mobility
+							Introduction
+							Design of Smart Infrastructure for Future Mobility
+							Sustainable Road Transportation
+							Shared Mobility and demand Responsive Public Transportation Smart Urban Logistics
+							Decarbonisation For UrbanTransportation
+							Governing Transportation in Smart Cities
+							Connected Road Infrastructure
+							
+							2.Intelligent Internet of Things & Intelligent Service Robots
+							Computer Vision
+							Human-Computer Interaction 
+							Control Systems Design 
+							Theory and Applications of Robotics I
+							Theory and Applications of Robotics II
+							6G Wireless Communication 
+							The fundamentals of IoT
+							AI for Healthcare</p>
+						<span class="school">Zhejiang University</span>
 					</div>
 
 
